# oss_issue_analyzer

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __main__.py
src/analyzer/: ai_scorer.py  bulk_processor.py  cache.py  config.py  llm_provider.py  preprocessor.py  quick_scorer.py  retriever.py  scorer.py
src/github/: client.py
src/indexer/: __init__.py  dependencies.py  embedder.py  indexer.py  models.py  parser.py  storage.py
src/indexer/languages/: __init__.py  c_family.py  go.py  java.py  javascript.py  python.py  rust.py
tests/: test_ai_config.py  test_ai_eval_fixture.py  test_ai_scorer.py  test_bulk_processor.py  test_cache.py  test_dependency_analysis.py  test_github_client.py  test_indexer.py  test_llm_provider.py  test_platforms.py  test_preprocessor_and_scoring.py  test_quick_scorer.py  test_retriever.py
tests/fixtures/: issue_eval_fixture.json
