[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "oss-issue-analyzer"
version = "1.0.0"
description = "A CLI tool that helps first-time open source contributors analyze GitHub issues against local repositories."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.24.1",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "lancedb>=0.1.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "scipy",
    "tree-sitter>=0.20.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-languages",
    "einops",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
oss-issue-analyzer = "src.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
