[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "oss-issue-analyzer"
version = "1.0.2"
description = "A CLI tool that helps first-time open source contributors analyze issues from GitHub, GitLab, and Bitbucket against local repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "typer>=0.24.1",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "lancedb>=0.1.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "scipy",
    "tree-sitter>=0.20.0",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tomli>=2.0.0; python_version < '3.11'",
    "einops",
    "build>=1.4.4",
    "twine>=6.2.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
oss-issue-analyzer = "src.__main__:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
